fix component overflow issue in the "request details" and other minor issues with datatable component

--- a/projects/mistral/frontend/css/style.css
+++ b/projects/mistral/frontend/css/style.css
@@ -23,6 +23,12 @@ ul {
 
 dl.request-summary {
     padding: 0px 40px;
+
+}
+
+dl.request-summary p {
+    white-space: normal;
+    margin-left: 1.3em;
 }
 
 dl.request-summary p:before {
@@ -264,22 +270,25 @@ dl.request-summary p:not(:last-child) {
     background-position: -168px 0;
 }
 
-/* ngx-datatable styles */
-.ngx-datatable.material {
-    background: #FFF;
-    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
-}
-
+/* Custom ngx-datatable styles */
+/* --------------------------- */
 .ngx-datatable .datatable-body .datatable-row-detail {
     background: #f5f5f5;
     padding: 10px;
-    margin-top: 2px;
-    width: 100%;
+    margin: 2px 0px;
 }
 
-.ngx-datatable .datatable-body .btn-toolbar {
-    display: block;
-    text-align: right;
+.ngx-datatable .datatable-body .datatable-scroll {
+    width: 100% !important;
+}
+
+/* This leads to a slight misalignment with the header when
+   browser v-scrollbar appears but prevents the header from
+   being partially hidden.
+*/
+.ngx-datatable .datatable-body-row,
+.ngx-datatable .datatable-body-row .datatable-row-group {
+    width: 100% !important;
 }
 
 .ngx-datatable .datatable-body-row:hover {
@@ -300,4 +309,3 @@ dl.request-summary p:not(:last-child) {
 .ngx-datatable .datatable-footer ul.pagination {
     margin-bottom: 0px !important;
 }
-
